[package]
name = "lyssg"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Simple SSG designed for personal websites"
repository = "https://github.com/Denendaden/lyssg"
readme = "README.md"
keywords = ["web", "ssg", "template"]
categories = ["template-engine", "web-programming", "parsing"]

[dependencies]
regex = "1.11.1"
