[package]
name = "lyweb"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Simple templating library designed for personal websites"
repository = "https://github.com/Denendaden/lyweb"
readme = "README.md"
keywords = ["web", "template"]
categories = ["template-engine", "web-programming", "parsing"]

[dependencies]
markdown = "1.0.0"
regex = "1.11.1"
